jumbotron is a part of app, not mohican
Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -5,3 +5,8 @@
 $grid-float-breakpoint: 890px;
 
 @import "mohican/mohican";
+
+// Following line is a fix to Bootstrap, which is likely to be included in the nxt release
+.container-fluid .jumbotron {
+  border-radius: 6px;
+}
