new dialog: max heightfit in windows and scrolling
Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/stylesheets/mohican/mohican.css.scss
+++ b/app/assets/stylesheets/mohican/mohican.css.scss
@@ -320,3 +320,16 @@ mnf-form {
   height: 400px;
   weight: 400px;
 }
+
+///////////////////////////////////////////
+//
+// Mohican BS dialog - max height to fit and scrolling
+// See also modalFitInWindow which sets max-height on .modal-body element.
+//
+.modal-dialog {
+  .modal-content {
+    .modal-header {}
+    .modal-body { overflow-y: auto; }
+    .modal-footer {}
+  }
+}
