flag deleted doc references with red font
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/stylesheets/mohican/mohican.css.scss
+++ b/app/assets/stylesheets/mohican/mohican.css.scss
@@ -127,7 +127,7 @@ a.navbar-brand {
     border-left-width: medium;
   }
   tr.deleted {
-    background-color: red;
+    color: red;
   }
 } // .mn-grid
 
