production demo: wood products seeding
Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %base{:href => "/"}/
-    %title #{"Celesta Plan II"}
+    %title #{"Celesta Production"}
     %meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0")
     -# android stand alone mode
     %meta(name="mobile-web-app-capable" content="yes")
@@ -10,7 +10,7 @@
     -# iOS stand alone mode
     %meta(name="apple-mobile-web-app-capable" content="yes")
     %meta(name="apple-mobile-web-app-status-bar-style" content="black")
-    %link(rel="apple-touch-icon" href="/assets/icon.png")
+    %link(rel="apple-touch-icon" href="/assets/cel_72.png")
     %link(rel="apple-touch-startup-image" href="/assets/icon.png")
     -# windows 8.1, maybe mobile, maybe not
     %meta(name="application-name" content="ID Pickup")
