prod-demo: production lines model and dashboard
Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/app/routes/production-index.html.haml
+++ b/app/assets/javascripts/app/routes/production-index.html.haml
@@ -21,6 +21,9 @@
   .row
     .col-lg-9
       .row
+        .col-lg-12(ng-if="!lines")
+          %button.btn.btn-lg.btn-warning
+            %span.glyphicon.glyphicon-refresh(animate) Loading production lines...
         .col-lg-12(ng-repeat="(line, cells) in lines")
           .panel.panel-primary
             .panel-heading
