--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -6,7 +6,7 @@
     %meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0")
     -# android stand alone mode
     %meta(name="mobile-web-app-capable" content="yes")
-    %link(rel="icon" sizes="192x192" href="/assets/icon.png")
+    %link(rel="icon" sizes="192x192" href="/assets/cel_72.png")
     -# iOS stand alone mode
     %meta(name="apple-mobile-web-app-capable" content="yes")
     %meta(name="apple-mobile-web-app-status-bar-style" content="black")
