proddemo: order management and status changes
This commit contains mainly UI changes, as well as some basic
event handling functionality, that allows the basic demo use-case
to happen.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -17,6 +17,17 @@ $screen-lg-min: 1500px;
   border-radius: 6px;
 }
 
+.pd-order-actions {
+  button {
+    margin-right: 12px;
+    margin-bottom: 16px;
+    @media (max-width: $screen-xs-max) {
+      display: block;
+      clear: both;
+    }
+  }
+}
+
 .production-cell {
   .cell-title {
     position: relative;
