click away to close popover
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -30,7 +30,7 @@
     = csrf_meta_tags
     -# If you need something from the Ruby code, set it up here
     -# %script
-  %body(data-main-app ng-cloak role="document")
+  %body(data-main-app ng-cloak popover-close role="document")
     .header-wrapper(ng-include="'app/menu.html'")
     %div.full_height.container-fluid
       %div(ui-view)
