--- a/app/assets/stylesheets/mohican/mohican.css.scss
+++ b/app/assets/stylesheets/mohican/mohican.css.scss
@@ -146,8 +146,8 @@ a.navbar-brand {
 }
 
 .notifications-holder {
-  overflow-y: scroll;
-  height: 500px;
+  // overflow-y: scroll;
+  // height: 500px;
 }
 
 mnf-form, mnf-form-grid {
