--- a/app/assets/stylesheets/mohican/mohican.css.scss
+++ b/app/assets/stylesheets/mohican/mohican.css.scss
@@ -56,6 +56,20 @@ a.navbar-brand {
 
 .mns-button {
   overflow: hidden;
+  & + .popover {
+    @media (max-width: $grid-float-breakpoint-max) {
+      max-width: 96% !important;
+      width: 96% !important;
+    }
+    @media (min-width: $grid-float-breakpoint) {
+      max-width: 70% !important;
+      width: 70% !important;
+      margin-left: -35%;
+      .arrow {
+        left: 95%;
+      }
+    }
+  }
 }
 
 
