ui layout and usability
This commit makes the UI more compact to fit the amount of
data needed, and it shows resources (trukit/varasto) on the right
if the screen is very large. Minor changes to highlighting as well.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/app/routes/orders-doc.html.haml
+++ b/app/assets/javascripts/app/routes/orders-doc.html.haml
@@ -23,7 +23,8 @@
             %mnf-delete(on-delete-success="ctrl.deleteSuccess()")
           %mnf-select(allowed-values="['standard', 'urgent', 'insured', 'fragile', 'flammable', 'tax_free', 'export', 'import', 'secret', 'poison', 'large', 'heavy']" mnf-field="delivery_tag" mnf-label="Delivery tag:")
           %mnf-select(allowed-values="['avoinna', 'valmis', 'tuotannossa']" mnf-field="status" mnf-label="Status:" mnf-select-type="single")
-          %mnf-text(mnf-field="next_cell_names" mnf-label="Next steps in production:")
+          %mnf-text(mnf-field="cell" mnf-label="Current cell:" read-only="true")
+          %mnf-text(mnf-field="next_cell_names" mnf-label="Next steps in production:" read-only="true")
           %mnf-date(mnf-field="created_at" mnf-label="Created at:" read-only="true")
           %mnf-reference(mnf-field="creator_name" mnf-field-source="['name', 'gender']" mnf-label="Creator:" mnf-ref-id="creator_ref" mnf-ref-resource="users" read-only="true")
           %mnf-text(mnf-field="order_number" mnf-label="Order number:")
