--- a/app/assets/javascripts/app/routes/barcode-doc.html.haml
+++ b/app/assets/javascripts/app/routes/barcode-doc.html.haml
@@ -2,5 +2,6 @@
   .row
     .col-xs-12
       %h1 processing barcode {{barcode}}
-      %h2(ng-if="cell_index") Fetching orders for cell no. {{cell_index}}
+      %h2(ng-if="cellIndex") Fetching orders for cell no. {{cellIndex}}
+      %h2(ng-if="cellName") Fetching orders for cell {{cellName}}
 
