special orders - two routes point to same resource
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/menu.html.haml
+++ b/app/assets/javascripts/app/menu.html.haml
@@ -25,6 +25,8 @@
           %li
             %a(href='#/orders') Orders
           %li
+            %a(href='#/special-orders') Special Orders
+          %li
             %a(href='#/lines') Production Lines and Cells
       %li
         %a(href='#/production') Production Dashboard
