--- a/app/assets/javascripts/app/routes/special-orders-index.html.haml
+++ b/app/assets/javascripts/app/routes/special-orders-index.html.haml
@@ -4,7 +4,7 @@
       %mn-filter-bar
     .col-xs-3
       %a.btn.btn-primary(href='#/orders/new') New Order
-      %a.btn(href='#/special-orders') Special Orders
+      %a.btn(href='#/orders') Orders
   .row.demo-feature
     .col-xs-10
       %button.btn.btn-danger(ng-click='ctrl.addModalNotif()') danger modal
